fix: google rating not cut off anymore

--- a/stylesheets/components/_block-2.scss
+++ b/stylesheets/components/_block-2.scss
@@ -27,9 +27,11 @@
       align-items: center;
       padding: 2.5rem;
 
-      & > img {
+      & > picture > img {
         max-width: 350px;
         border-radius: $border-radius;
+        object-fit: contain;
+        margin: 0 auto;
       }
     }
   }
